# libserver

./: .clang-format  .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/basic/: main.c
examples/ftp_server/: main.c  style.css
examples/https_server/: main.c
examples/json_parse/: main.c
examples/json_serve/: main.c
examples/repro_json_crash/: main.c
examples/router/: main.c
include/: arena.h  common.h  fs.h  http2.h  json.h  log.h  map.h  server.h  stringbuilder.h
include/protocols/: ftp.h  ftp_http.h
scripts/: benchmark.sh  block_port.sh  gen_large_json.py  generate_cert.sh  release.py
src/: arena.c  common.c  fs.c  http2.c  json.c  log.c  map.c  server.c  stringbuilder.c
src/protocols/: ftp.c  ftp_http.c
